fix: fix code highlight colors to increase contrast

--- a/src/app.css
+++ b/src/app.css
@@ -24,6 +24,7 @@
 		--input: 20 5.9% 90%;
 		--ring: 20 14.3% 4.1%;
 		--radius: 0.5rem;
+		--code-highlight: 48 100% 93%;
 	}
 
 	.dark {
@@ -46,6 +47,7 @@
 		--border: 12 6.5% 15.1%;
 		--input: 12 6.5% 15.1%;
 		--ring: 35.5 91.7% 32.9%;
+		--code-highlight: 214 52% 25%;
 	}
 
 	html.dark pre.shiki {
@@ -67,16 +69,16 @@
 	pre.has-highlighted span.highlighted {
 		width: calc(100% + 1.5rem);
 		display: inline-block;
-		background-color: hsl(var(--primary) / 0.2);
-		padding: 0 0.75rem;
+		background-color: hsl(var(--code-highlight) / 1);
+		padding: 0 0.75rem 0 0.75rem;
 		margin-left: -0.75rem;
 	}
 
 	@media (min-width: 1024px) {
 		pre.has-highlighted span.highlighted {
 			width: calc(100% + 3rem);
-			padding: 0.14em 1.5rem;
-			margin-top: -0.14em;
+			padding: 0.2em 1.5rem 0 1.5rem;
+			margin-top: -0.2em;
 			margin-left: -1.5rem;
 		}
 	}
@@ -84,6 +86,6 @@
 
 /* todo: check why this doesn't work in @layer base */
 .highlighted-word {
-	background-color: hsl(var(--primary) / 0.2);
+	background-color: hsl(var(--code-highlight) / 1);
 	padding: 0.25em 0;
 }
